fixed overlapping bootstrap and custom CSS

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-:root {
+html,body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -61,19 +61,13 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* .card {
-  padding: 2em;
-} */
 
 #app {
-  /* max-width: 1280px; */
-  /* margin: 0 auto;
-  padding: 2rem; */
   text-align: center;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  html,body{
     color: #213547;
     background-color: #ffffff;
   }
